# catan_networks

./: README.md  catan.ipynb  draft_sim_run.py  draft_sim_run_deterministic.py  pyproject.toml  requirements.txt  todo.md
src/agents/: agent.py  draftagent.py
src/catan_nets/: network.py  state.py  visualization.py
src/simulator/: draftsimulator.py
src/utils/: action.py
