[project]
name = "catannets"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
